# tpv

./: Makefile  README.md  agents.md  pyproject.toml
src/scripts/: __init__.py  evaluate.py  predict.py  train.py
src/tests/: test_loader.py  test_pipeline_stream.py  test_preprocessing_epoching.py  test_scoring.py
src/tpv/: __init__.py  channels.py  cli.py  config.py  dataset.py  epoching.py  events.py  loader.py  model.py  pipeline.py  preprocessing.py  scoring.py  stream.py
