[project]
name = "tpv"
version = "0.1.0"
description = "EEG model training"
authors = [
    { name = "Mathis", email = "maujogue15@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mne>=1.12.1",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.8",
    "ty>=0.0.1a33",
]

[project.scripts]
tpv-visualize = "tpv.cli:main"
tpv-train = "scripts.train:main"
tpv-predict = "scripts.predict:main"
tpv-evaluate = "scripts.evaluate:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
